tests/ui/allocator/pin-correctness.stderr
error[E0277]: the trait bound `BadAlloc: StaticAllocator` is not satisfied
  --> $DIR/pin-correctness.rs:26:42
   |
LL |     let _: Pin<Box<dyn Any, BadAlloc>> = base;
   |                                          ^^^^ unsatisfied trait bound
   |
help: the nightly-only, unstable trait `StaticAllocator` is not implemented for `BadAlloc`
  --> $DIR/pin-correctness.rs:10:1
   |
LL | struct BadAlloc;
   | ^^^^^^^^^^^^^^^
help: the following other types implement trait `StaticAllocator`
  --> $SRC_DIR/core/src/alloc/mod.rs:LL:COL
   |
   = note: `&A`
  --> $SRC_DIR/std/src/alloc.rs:LL:COL
   |
   = note: `System`
  --> $SRC_DIR/alloc/src/alloc.rs:LL:COL
   |
   = note: `std::alloc::Global`
   = note: required for `Box<i32, BadAlloc>` to implement `PinCoerceUnsized`
   = note: required for the cast from `Pin<Box<i32, BadAlloc>>` to `Pin<Box<(dyn Any + 'static), BadAlloc>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
